2011-08-05  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-indentation.lisp (macro-indentation): Tweak so that
	things that could be bindings are indented by 1, not 4.

2011-07-27  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el: Tweak COND indentation.
	* slime-cl-indent-test.txt: Tests 48 and 49.

2011-06-21  Nikodemus Siivola  <nikodemus@random-state.net>

	* slime-cl-indent.el (lisp-loop-indent-forms-like-keywords): Fix type error.
	(common-lisp-style-default): Fix type error, move to after styles have been
	defined so as to be able to offer a menu for picking the predefined styles.
	("sbcl"): Oops! It's (as ...) not (:as ...). Also add couple of missing defining
	forms.

2011-06-16  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-indentation.lisp (macro-indentation): More complex
	version than the default. Fixes some of the misbehaviour of
	the previous complex version.

2011-06-15  Stas Boukarev  <stassats@gmail.com>

	* slime-scheme.el (slime-scheme-indentation-update):
	`slime-indentation-update-hooks' now requires functions to accept
	three arguments. Add `packages' parameter.

2011-06-14  Nikodemus Siivola  <nikodemus@random-state.net>

	WITH-COMPILATION-UNIT indentation.

	* slime-cl-indent.el: Add indentation method.

	* slime-cl-indent-test.txt: Test 47.

	Fix indentation of incomplete destructring.

	* slime-cl-indent.el (lisp-indent-259): If there's a level of
	destructuring specified in a tail, but we're looking at a word,
	indent to sexp instead.

	* slime-cl-indent-test.txt: Test 46.

	Don't consider DEFINER and DEFINITION as tentative defuns.

	* slime-cl-indent.el (common-lisp-indent-function-1): Don't consider
	"definition" or "definer" to be tentative defuns.

	* slime-cl-indent-test.txt: Tests 44-45.

	Better DEFMETHOD and :METHOD indentation.

	* slime-cl-indent.el (lisp-beginning-of-defmethod): New function.
	(lisp-indent-defmethod): Extend to work with non-toplevel defmethods,